airflowVK_DAG/logs/dag_id=dag_saver_v01/run_id=manual__2024-09-21T10:37:36.287889+00:00/task_id=create_table_vk/attempt=1.log
[2024-09-21T10:37:39.046+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.create_table_vk manual__2024-09-21T10:37:36.287889+00:00 [queued]>
[2024-09-21T10:37:39.073+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.create_table_vk manual__2024-09-21T10:37:36.287889+00:00 [queued]>
[2024-09-21T10:37:39.074+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T10:37:39.078+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 2
[2024-09-21T10:37:39.078+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T10:37:39.117+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_table_vk> on 2024-09-21 10:37:36.287889+00:00
[2024-09-21T10:37:39.128+0000] {standard_task_runner.py:55} INFO - Started process 5323 to run task
[2024-09-21T10:37:39.133+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_saver_v01', 'create_table_vk', 'manual__2024-09-21T10:37:36.287889+00:00', '--job-id', '15', '--raw', '--subdir', 'DAGS_FOLDER/dag_saver.py', '--cfg-path', '/tmp/tmpc9bvhh7x']
[2024-09-21T10:37:39.134+0000] {standard_task_runner.py:83} INFO - Job 15: Subtask create_table_vk
[2024-09-21T10:37:39.267+0000] {task_command.py:389} INFO - Running <TaskInstance: dag_saver_v01.create_table_vk manual__2024-09-21T10:37:36.287889+00:00 [running]> on host 16da3808dee2
[2024-09-21T10:37:39.418+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=<NAME>
AIRFLOW_CTX_DAG_ID=dag_saver_v01
AIRFLOW_CTX_TASK_ID=create_table_vk
AIRFLOW_CTX_EXECUTION_DATE=2024-09-21T10:37:36.287889+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-21T10:37:36.287889+00:00
[2024-09-21T10:37:39.423+0000] {sql.py:253} INFO - Executing: 
            create table if not exists vk_group_posts (
                id serial PRIMARY KEY,
                vk_group_link VARCHAR,
                vk_post_id INTEGER,
                vk_post_text VARCHAR,
                vk_post_comments VARCHAR,
                timestamp default = now()
            )
        
[2024-09-21T10:37:39.442+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T10:37:39.867+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T10:37:39.935+0000] {sql.py:364} INFO - Running statement: 
            create table if not exists vk_group_posts (
                id serial PRIMARY KEY,
                vk_group_link VARCHAR,
                vk_post_id INTEGER,
                vk_post_text VARCHAR,
                vk_post_comments VARCHAR,
                timestamp default = now()
            )
        , parameters: None
[2024-09-21T10:37:39.942+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "default"
LINE 8:                 timestamp default = now()
                                  ^

[2024-09-21T10:37:39.979+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_saver_v01, task_id=create_table_vk, execution_date=20240921T103736, start_date=20240921T103739, end_date=20240921T103739
[2024-09-21T10:37:40.018+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 15 for task create_table_vk (syntax error at or near "default"
LINE 8:                 timestamp default = now()
                                  ^
; 5323)
[2024-09-21T10:37:40.050+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-21T10:37:40.143+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
